# new-yorker-fiction-podcast-data

./: .gitignore  LICENSE  Makefile  README.md  metadata.json  pyproject.toml
data/: episodes.csv  people.csv
scripts/: harvest.py  wd_details.py
