[tool.poetry]
name = "new-yorker-fiction-podcast-data"
version = "0.1.0"
description = ""
authors = ["Ted Lawless <lawlesst@gmail.com>"]
readme = "README.md"
packages = [{include = "new_yorker_fiction_podcast_data"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
requests-cache = "^0.9.7"
bs4 = "^0.0.1"
sparqlwrapper = "^2.0.0"
datasette = "^0.63"
csvs-to-sqlite = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
